crates/rspyts-macros/tests/ui/serde_flatten.stderr
error: unsupported Serde attribute `flatten` on this field; rspyts can reflect only `rename`. Use `serde_json::Value` for deliberately schemaless data
 --> tests/ui/serde_flatten.rs:7:13
  |
7 |     #[serde(flatten)]
  |             ^^^^^^^
